:sparkles: added token authentication
